<resources>
    <string name="app_name">Quick Guess</string>
    <string name="your_username">Player name</string>
    <!--<string name="baseUrl">https://playquickguess.herokuapp.com/</string>-->
    <string name="baseUrl">http://192.168.1.12:8000/</string>
    <string name="facebook_app_id">240267453345824</string>
    <string name="facebook_login_protocol_scheme">fb240267453345824</string>
    <string name="read_more">Read more…</string>
    <string name="user_guest">Guest</string>
    <string name="life">Life</string>
    <string name="time_left">Time left : </string>
    <string name="reset">RESET</string>

    <!--String resource for slides -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Step one</string>
    <string name="slide_1_desc">all about instructions</string>

    <string name="slide_2_title">Step two</string>
    <string name="slide_2_desc">all about instructions</string>

    <string name="slide_3_title">Step three</string>
    <string name="slide_3_desc">all about instructions</string>

    <string name="slide_4_title">Step four</string>
    <string name="slide_4_desc">all about instructions</string>
    <string name="Share">Share</string>
    <string name="defaultTimerValue">20</string>
    <string name="loginbackground">Login Background</string>
    <string name="menu_background">Menu Background</string>
    <string name="categories_background">Background for categories</string>
    <string name="background_by_category">Background By Category</string>
    <string name="icon_result">Icon for answer result</string>
    <string name="about_backgrounds">Abouts background</string>
    <string name="quit_bg">Quit blur background</string>
    <string name="instruction_4">Instruction 4</string>
    <string name="instruction_3">Instruction 3</string>
    <string name="instruction_2">Instruction 2</string>
    <string name="instruction_1">Instruction 1</string>

    <string name="points">points</string>
    <string name="viewAllText">Fun facts</string>
    <string name="tap_to_start">TAP TO START</string>
    <string name="contact_us">Contact us</string>
    <string name="dummy_question">Lorem ipsum dolor sit amet, consectetur adipisicing elit.Sit tempore cum id saepe?</string>
    <string name="share">Share on Facebook</string>
    <string name="_continue">CONTINUE</string>
    <string name="answered">Answered</string>
    <string name="email_address">Email address</string>
    <string name="player_name">Player name</string>
    <string name="player_points">Player points</string>
    <string name="search_here">Type player name here</string>
    <string name="play_again">Play Again</string>
    <string name="score">Score :</string>
    <string name="need_to_answer">Need to answer :</string>
    <string name="easy_level">Easy</string>
    <string name="moderate_level">Moderate</string>
    <string name="difficult_level">Difficult</string>
    <string name="input_pin">Password</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="game_over">Game over</string>
    <string name="sound_fx">SOUND FX :</string>
    <string name="switch_account">Switch Account</string>
    <string name="bg_music">BG MUSIC :</string>
    <string name="about">The purpose of this game is to give knowledge and also to expand their critical thinking that will help them answer efficiently.</string>
    <string name="version">The game is designed only to run on Android OS with Oreo 8.1, Nougat 7.0, Marshmallow 6.0, Lollipop 5.1, Kit Kat 4.4, Gingerbread 2.2 and Ice cream platforms. It also supports the previous version of the said platforms but some features may not be compatible.</string>
    <string name="choice_d">Choice D</string>
    <string name="choice_c">Choice C</string>
    <string name="choice_b">Choice B</string>
    <string name="choice_a">Choice A</string>

    <item name="class_id" type="id" />
    <item name="category" type="id" />
</resources>
