<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:autofit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true"
    >
    <!--android:background="#FAF9FF"-->
<RelativeLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/answerQuestionLayout"
    tools:context=".AnswerQuestion">



    <!--layout background-->
    <!--<ImageView-->
        <!--android:id="@+id/background"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:maxHeight="0dp"-->
        <!--android:src="@drawable/body"-->
        <!--android:contentDescription="@null"-->
        <!--/>-->

    <!--life and user points-->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userAndPointsLayout"
        android:orientation="horizontal">



        <TextView
                android:fontFamily="@font/font_roboto_regular"
                android:id="@+id/life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="@string/life"
                android:layout_marginTop="2dp"
                android:layout_marginStart="40dp"
                android:textAlignment="center"
                android:textColor="#707070"
            />


        <TextView
                android:fontFamily="@font/font_roboto_regular"
                android:id="@+id/userPoints"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points"
                android:textColor="#707070"
                android:layout_marginEnd="41dp"
                android:layout_marginTop="4dp"
                tools:ignore="RelativeOverlap" />

    </RelativeLayout>


<!--layout for timer-->
 <LinearLayout
     android:id="@+id/timerLayout"
     android:layout_below="@+id/userAndPointsLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <Button
                android:text="@string/skip"
                android:id="@+id/skipQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="18dp"
                android:background="#fff"
                android:textColor="#5a5a5a"
                android:fontFamily="@font/montserrat_black"
                 />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/defaultTimerValue"
                android:textColor="#5a5a5a"
                android:textSize="55sp"
                android:fontFamily="@font/montserrat_extrabold"
                android:layout_centerHorizontal="true"
                />

            <Button
                android:text="@string/exit"
                android:id="@+id/exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="18dp"
                android:layout_alignParentBottom="true"
                android:background="#fff"
                android:fontFamily="@font/montserrat_black"
                android:textColor="#5a5a5a"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

 </LinearLayout>

    <FrameLayout
        android:id="@+id/questionResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/questionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/timerLayout"
        android:padding="15dp"
        android:orientation="vertical">

            <!--question-->

        <me.grantland.widget.AutofitLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:maxLines="2"
            autofit:minTextSize="16sp"
            >

            <TextView
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/paper"
                android:fontFamily="@font/handwrite_bold"
                android:gravity="center"
                android:padding="25dp"
                android:text="@string/question"
                android:textColor="#4a4a4a"
                android:textSize="30sp" />


        </me.grantland.widget.AutofitLayout>


        <LinearLayout
            android:padding="15dp"
            android:id="@+id/choiceLayoutOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <!--CHOICE A-->
            <com.marcouberti.autofitbutton.AutoFitButton

                    android:id="@+id/choice_a"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textColor="#003399"
                    android:background="@drawable/rounded_corner_3"
                    android:fontFamily="@font/montserrat_black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text="@string/choice_a"
                />

            <!--CHOICE B-->
            <com.marcouberti.autofitbutton.AutoFitButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/choice_b"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#f6f6f6"
                    android:fontFamily="@font/font_roboto"
                    android:text="@string/choice_b"
                    android:textColor="#7C72FF"
                    android:textSize="20sp"
                    android:textStyle="bold"

                />

            <!--CHOICE C-->
            <com.marcouberti.autofitbutton.AutoFitButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/choice_c"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#f6f6f6"
                    android:fontFamily="@font/font_roboto"
                    android:text="@string/choice_c"
                    android:textColor="#7C72FF"
                    android:textSize="20sp"
                    android:textStyle="bold"

                />

            <!--CHOICE D-->
            <com.marcouberti.autofitbutton.AutoFitButton
                    android:layout_marginTop="15dp"
                    android:id="@+id/choice_d"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#f6f6f6"
                    android:fontFamily="@font/font_roboto"
                    android:text="@string/choice_d"
                    android:textColor="#7C72FF"
                    android:textSize="20sp"
                    android:textStyle="bold"

                />

        </LinearLayout>

       </LinearLayout>




    <!-- fragment for fun facts -->
    <FrameLayout
        android:id="@+id/fragment_fun_facts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />


    <FrameLayout
        android:id="@+id/fragment_game_over"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

</RelativeLayout>
</ScrollView>